projects/client/src/style/typography/index.css
h1,
h2,
h3,
h4,
h5,
h6,
p,
span.display-title {
  margin: 0;
  padding: 0;
}

span.display-title {
  display: block;

  font-size: var(--ni-104);
  font-style: normal;
  font-weight: 600;
}

span.large {
  font-size: var(--ni-160);
}

h1 {
  font-size: var(--ni-72);
  font-style: normal;
  font-weight: 600;
  letter-spacing: -0.18rem;
}

h2 {
  font-size: var(--ni-56);
  font-style: normal;
  font-weight: 600;
  letter-spacing: -0.14rem;
}

h3 {
  font-size: var(--ni-48);
  font-style: normal;
  font-weight: 600;
  letter-spacing: -0.12rem;
}

h4 {
  font-size: var(--ni-40);
  font-style: normal;
  font-weight: 600;
  letter-spacing: -0.1rem;
}

h5 {
  font-size: var(--ni-24);
  font-style: normal;
  font-weight: 600;
}

h6 {
  font-size: var(--ni-14);
  font-style: normal;
  font-weight: 600;
  letter-spacing: 0.035rem;
  text-transform: uppercase;
}

p {
  font-size: var(--ni-16);
  font-style: normal;
  font-weight: 400;

  &.large {
    font-size: var(--ni-18);
  }

  &.small {
    font-size: var(--ni-14);
  }

  &.meta-info {
    font-size: var(--ni-10);
    font-style: normal;
    font-weight: 600;
    letter-spacing: 0.025rem;
    text-transform: uppercase;
  }
}

.ellipsis {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.trakt-button p:not(.meta-info) {
  font-size: 1rem;
  font-style: normal;
  font-weight: 700;
  text-transform: uppercase;
}

p,
span,
h1,
h2,
h3,
h4,
h5,
h6 {
  &.secondary {
    color: var(--color-text-secondary);
  }

  &.capitalize {
    text-transform: none;

    &::first-letter {
      text-transform: uppercase;
    }
  }

  &.uppercase {
    text-transform: uppercase;
  }

  &.bold {
    font-weight: 600;
  }

  &.italic {
    font-style: italic;
  }
}

